<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/account_header">

        <EditTextPreference
            app:key="username"
            app:title="@string/username_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="password"
            app:title="@string/password_title"
            android:inputType="numberPassword"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/server_header">

        <ListPreference
            app:defaultValue="webrtc01.mundi-tv.tk"
            app:entries="@array/url_entries"
            app:entryValues="@array/url_values"
            app:key="xmppserver"
            app:title="@string/xmppurl_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="BOSH"
            app:entries="@array/bosh_entries"
            app:entryValues="@array/bosh_values"
            app:key="boshflag"
            app:enabled="false"
            app:title="@string/bosh_proxy"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

    </PreferenceCategory>

</PreferenceScreen>